Refactored day 17